--- a/.amplify-hosting/deploy-manifest.json
+++ b/.amplify-hosting/deploy-manifest.json
@@ -14,6 +14,10 @@
       "target": {
         "kind": "ImageOptimization",
         "cacheControl": "max-age=1"
+      },
+      "fallback": {
+        "kind": "Static",
+        "cacheControl": "no-store"
       }
     }
   ],
