--- a/.amplify-hosting/deploy-manifest.json
+++ b/.amplify-hosting/deploy-manifest.json
@@ -29,7 +29,7 @@
       200, 400, 800
     ],
     "domains": [
-      "main.d3o1gd76ew0q9c.amplifyapp.com"
+      "d2wze553tt9i39.cloudfront.net"
     ],
     "remotePatterns": [
     ],
