--- a/.amplify-hosting/deploy-manifest.json
+++ b/.amplify-hosting/deploy-manifest.json
@@ -29,7 +29,7 @@
       200, 400, 800
     ],
     "domains": [
-      "YOUR_DISTRIBUTION.cloudfront.net"
+      "d3ud9anp2kv6o2.cloudfront.net"
     ],
     "remotePatterns": [
     ],
