--- a/.amplify-hosting/deploy-manifest.json
+++ b/.amplify-hosting/deploy-manifest.json
@@ -13,7 +13,7 @@
       "path": "/*",
       "target": {
         "kind": "ImageOptimization",
-        "cacheControl": "max-age=3600"
+        "cacheControl": "private,no-store"
       }
     }
   ],
